Context-Free-Grammer.txt
Program             -> MainMethodDeclaration
MainDeclaration     -> 'class' 'Main' '(' ')' '{' StatementList '}'
StatementList       -> Statement | ε
Block               -> "{" Statement "}"
Statement           -> Assignment | OutputStatement | InputStatement | IfStatement | LoopStatement
Assignment          -> DataType Identifier '=' Expression ';'
OutputStatement     -> 'out' ':' Expression ';'
InputStatement      -> 'in' ':' Identifier ';'
IfStatement         -> 'if' '(' BooleanExpression ')' '{' StatementList '}'
LoopStatement       -> 'while' '(' BooleanExpression ')' '{' StatementList '}'
RelationalStatement -> Expression '==' Expression 
                    | Expression '<' Expression 
                    | Expression '>' Expression 
                    | Expression '<=' Expression 
                    | Expression '>=' Expression
BooleanExpression   -> BooleanLiteral | RelationalStatement
                    | 'NOT' RelationalStatement
                    | RelationalStatement 'AND' RelationalStatement 
                    | RelationalStatement 'OR' RelationalStatement 
Expression          -> Term (('+' | '-' | '*' | '/') Term)*
Term                -> Identifier | IntegerLiteral | StringLiteral | BooleanLiteral
DataType            -> "int" | "float" | "String" | "bool" | "double" | "char"
Identifier          -> Letter (Letter | Digit)*
IntegerLiteral      -> // Any integer value
StringLiteral       -> "\"" AnyCharacters "\""
BooleanLiteral      -> "true" | "false"
AnyCharacters       -> // Any sequence of characters

Program
|-- MainMethodDeclaration
    |-- "class"
    |-- "Main"
    |-- "("
    |-- ")"
    |-- "{"
    |-- StatementList
        |-- Statement
            |-- OutputStatement
                |-- "out"
                |-- ":"
                |-- Expression
                     |-- Term
                         |-- Factor
                             |-- StringLiteral
                                 |-- AnyCharacters
    |-- "}"
